[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://spider05.png" type="Texture" id=2]
[ext_resource path="res://Sprites/night_sky.png" type="Texture" id=3]
[ext_resource path="res://SFX/270328__littlerobotsoundfactory__hero-death-00.wav" type="AudioStream" id=4]
[ext_resource path="res://SFX/270330__littlerobotsoundfactory__jingle-achievement-01.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/270340__littlerobotsoundfactory__pickup-01.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Dead"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=2]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 34.8347

[node name="Player" type="KinematicBody2D"]
position = Vector2( 17.9596, 17.3865 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [ 192.0, 177.0, 276.0 ]
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 5
hframes = 10
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "Idle"
anims/Dead = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Walking = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.936813, 4.68407 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 800, 800 )

[node name="Sky" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="WestUp" type="RayCast2D" parent="."]
position = Vector2( -9.9495, -27.9831 )
enabled = true
cast_to = Vector2( -25, 0 )

[node name="EastUp" type="RayCast2D" parent="."]
position = Vector2( 11.3005, -27.9831 )
enabled = true
cast_to = Vector2( 25, 0 )

[node name="NorthRight" type="RayCast2D" parent="."]
position = Vector2( 33.8005, -5.48313 )
enabled = true
cast_to = Vector2( 0, -25 )

[node name="SouthRight" type="RayCast2D" parent="."]
position = Vector2( 33.8005, 15.7669 )
enabled = true
cast_to = Vector2( 0, 25 )

[node name="WestDown" type="RayCast2D" parent="."]
position = Vector2( -9.9495, 38.2669 )
enabled = true
cast_to = Vector2( -25, 0 )

[node name="EastDown" type="RayCast2D" parent="."]
position = Vector2( 11.3005, 38.2669 )
enabled = true
cast_to = Vector2( 25, 0 )

[node name="SouthLeft" type="RayCast2D" parent="."]
position = Vector2( -32.4495, 15.7669 )
enabled = true
cast_to = Vector2( 0, 25 )

[node name="NorthLeft" type="RayCast2D" parent="."]
position = Vector2( -32.4495, -5.48313 )
enabled = true
cast_to = Vector2( 0, -25 )

[node name="DeathSFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="WinSFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="RespawnSFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
